WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204198
[Web Animations] Accelerated transitions do not always remove their backing accelerated animation
https://bugs.webkit.org/show_bug.cgi?id=204198
Summary
[Web Animations] Accelerated transitions do not always remove their backing a...
Antoine Quint
Reported
2019-11-14 10:25:28 PST
[Web Animations] Accelerated transitions do not always remove their backing accelerated animation
Attachments
Patch
(7.34 KB, patch)
2019-11-14 10:37 PST
,
Antoine Quint
dino
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews213 for win-future
(14.03 MB, application/zip)
2019-11-14 12:17 PST
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2019-11-14 10:37:37 PST
Created
attachment 383559
[details]
Patch
Antoine Quint
Comment 2
2019-11-14 10:37:42 PST
<
rdar://problem/45847205
>
Antoine Quint
Comment 3
2019-11-14 10:38:14 PST
***
Bug 187845
has been marked as a duplicate of this bug. ***
EWS Watchlist
Comment 4
2019-11-14 12:17:31 PST
Comment on
attachment 383559
[details]
Patch
Attachment 383559
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/13255927
New failing tests: animations/no-style-recalc-during-accelerated-animation.html
EWS Watchlist
Comment 5
2019-11-14 12:17:33 PST
Created
attachment 383567
[details]
Archive of layout-test-results from ews213 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews213 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Antoine Quint
Comment 6
2019-11-14 12:18:02 PST
https://trac.webkit.org/changeset/252461/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug