[Web Animations] Accelerated transitions do not always remove their backing accelerated animation https://bugs.webkit.org/show_bug.cgi?id=204198 <rdar://problem/45847205>

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

Mark some WPT progressions.

* web-platform-tests/dom/events/Event-dispatch-on-disabled-elements-expected.txt:

Source/WebCore:

Test: webanimations/accelerated-animation-removal-upon-transition-completion.html

There could be several calls to KeyframeEffect::updateAcceleratedAnimationState() made after an animation had completed but
before any pending accelerated actions would be processed during the next animation frame. In the first call, we would correctly
set add Accelerated::Stop to the list of pending accelerated actions, but on a further call, wrongly assuming that the fact that
we'd already recorded an Accelerated::Stop action meant that it had been committed, we would clear that action and the animation
would never be explicitly removed.

Additionally, we would schedule animation resolution on the DocumentTimeline in the wrong function, we now do that in the function
where animations with an effect pending accelerated actions is added rather than in the function where we track which elements have
accelerated animations.

* animation/DocumentTimeline.cpp:
(WebCore::DocumentTimeline::animationAcceleratedRunningStateDidChange):
(WebCore::DocumentTimeline::updateListOfElementsWithRunningAcceleratedAnimationsForElement):
* animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::updateAcceleratedAnimationState):

LayoutTests:

Add a new test that checks that a CSS Transition targeting the transform property which requires a layer correctly clears the
accelerated animation upon completion.

* webanimations/accelerated-animation-removal-upon-transition-completion-expected.txt: Added.
* webanimations/accelerated-animation-removal-upon-transition-completion.html: Added.

Canonical link: https://commits.webkit.org/217501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252461 268f45cc-cd09-0410-ab3c-d52691b4dbfc